[package]
name = "nasa-download"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.4"
tokio = { version = "1.34", features = ["full"] }
reqwest = "0.11.23"
html_parser = "0.7.0"

[[bin]]
name = "nasa-download"
path = "nasa-download.rs"
