[package]
name = "nasa-download"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34", features = ["full"] }
reqwest = "0.11.23"
scraper = "0.12.0"
clap = { version = "4.5.0", features = ["derive"] }
anyhow = "1.0.79"
once_cell = "1.19.0"

[dev-dependencies]
assert_cmd = "2.0.13"
predicates = "3.1.0"

[[bin]]
name = "nasa-download"
path = "src/nasa-download.rs"
